compiler/testData/diagnostics/tests/typealias/recursive.kt
typealias A = B
typealias B = A

val x: <!RECURSIVE_TYPEALIAS_EXPANSION!>A<!> = TODO()